# Document-Scanner-Old

./: .gitignore  README.md  TODO.md  benchmark.py  bm_model.py  count_lines.sh  data.py  model.py  seg_model.py  test.py  train.py  visualize.py
app/app/: build.gradle
app/app/src/androidTest/java/com/erikstern/documentscanner/: ExampleInstrumentedTest.kt
app/app/src/main/: AndroidManifest.xml
app/app/src/main/cpp/: CMakeLists.txt  jni_interface.cpp
app/app/src/main/java/com/erikstern/documentscanner/: GLSurfaceRenderer.kt  MainActivity.kt
app/app/src/main/res/layout/: activity_main.xml
app/app/src/main/res/values/: themes.xml
app/app/src/main/res/values-night/: themes.xml
app/app/src/test/java/com/erikstern/documentscanner/: ExampleUnitTest.kt
app/gradle/wrapper/: gradle-wrapper.properties
assets/: CMakeLists.txt  build.sh
assets/src/: main.cpp
autolabel/: autolabel.py  manulabel.py  mesher.py  support.py  utils.py
datasets/: combine_dataset.py  downscale_dataset.py  features_from_downscaled.py  finetuning_metric.py  flatten_downscaled.py
datasets/Custom/: 20230319_175025.mp4.data  20230407_123932.mp4.data  20230407_124050.mp4.data  20230407_124321.mp4.data  20230407_184028.mp4.data  20230407_184309.mp4.data  combine_dataset.py
datasets/Doc3d/: bm_exr.py  combine_dataset.py  lines.py  mask_img.py
model/: autolabel.py  benchmark.py  bm_model.py  data.py  export.py  model.py  seg_model.py  test.py  train.py
supportlib/: CMakeLists.txt  build_all.sh  build_android.sh  build_lnx.sh  clean_all.sh
supportlib/include/: android_camera.h  android_camera.hpp  android_jni.h  android_jni.hpp  assets.h  assets.hpp  backend.h  backend.hpp  cam_preview.h  cam_preview.hpp  camera.hpp  img_proc.hpp  input.hpp  log.h  log.hpp  nn.h  nn.hpp  pipeline.h  pipeline.hpp  platform.hpp  shader_program.hpp  types.h  types.hpp  user_interface.hpp  utils.hpp
supportlib/src/: android_camera.cpp  android_jni.cpp  android_platform.cpp  assets.cpp  backend.cpp  cam_preview.cpp  font.cpp  gl_backend.cpp  gl_es_backend.cpp  img_proc.cpp  input.cpp  linux_camera.cpp  linux_platform.cpp  linux_window.cpp  nn.cpp  pipeline.cpp  platform.cpp  shader_program.cpp  types.cpp  user_interface.cpp  utils.cpp
